# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  app_logger.py  content.py  file.py  page_loader.py  resource_loader.py  src_loader.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_content.py  test_exception.py  test_load_page.py  test_page_loader.py  test_src_load.py  test_url.py
tests/fixtures/: downloaded_web_site.html
tests/fixtures/mocks/: application.css  runtime.js
