[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Viktory <vberkle@gmail.com>"]
license = "no"
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
